# fast-linrec-finder

./: CMakeLists.txt  LICENSE  README.md
include/: RecurrenceHankelSolver.cuh
src/: RecurrenceHankelSolver.cu  main.cpp
